app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-svc
  namespace: calc
  labels:
    run: calc-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: calc-app
